# esp32-audio

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  elio-audio.ino  esp32-audio.ino  platformio.ini  pyproject.toml  receiver.py  todo.txt  wav_to_header.py
src/: main.cpp
tools/: check_openrouter.py  data_prep.sh  split_wav.sh
